<resources>
    <string name="app_name">Feedit</string>
    <string name="username">Username:</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log in!</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="hello">Hello</string>
    <string name="user_name_">User Name:</string>
    <string name="password_">Password:</string>
    <string name="remember_me">Remember Me</string>
    <string name="feed">Feed</string>
    <string name="projects">Projects</string>
    <string name="teams">Teams</string>
    <string name="feedit">FeedIt</string>
    <string name="new_post">New Post</string>
    <string name="write_your_post">Write Your Post</string>
    <string name="relevant_project">Relevant Project</string>
    <string name="relevant_teams">Relevant Teams</string>
    <string name="post_s_title">Post\'s Title</string>
    <string name="post_prompt">Post!</string>
    <string name="sign_in_title">Sign In</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_acount">Don\'t have an acount?</string>
    <string name="logo">Logo</string>
    <string name="app_logo">app_logo</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="marketing">Marketing</string>
    <string name="new_project">New Project</string>
    <string name="add_project">Add Project</string>
    <string name="project_s_name">Project\'s Name</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_prompt">Are you sure you want to delete this post?</string>
    <string name="sign_in_with_credential_failure">signInWithCredential:failure</string>
    <string name="google_sign_in_successfully">User signed in successfully with Google account</string>
    <string name="sign_in_credential_success">signInWithCredential:success</string>
    <string name="clear">Clear</string>
    <string name="main_office">Main Office</string>
    <string name="production">Production</string>
    <string name="pr">PR</string>
    <string name="executive">Executive</string>
    <string name="r_amp_d"><![CDATA[R & D]]></string>
    <string name="post_title">Post Title</string>
    <string name="team">Team</string>
    <string name="_10_00">10:00</string>
    <string name="post_text">Post Text</string>
    <string name="project">Project</string>



</resources>
