<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feedit_logo"
        android:contentDescription="@string/app_logo" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="259dp"
        android:layout_height="69dp"
        android:background="@drawable/button_creat_user_backgrpund"
        android:onClick="onClick"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="259dp"
        android:layout_height="69dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button_creat_user_backgrpund"
        android:onClick="onClick"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>