<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity">

    <ImageView
        android:id="@+id/new_post_background_purple"
        android:layout_width="434dp"
        android:layout_height="938dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@drawable/new_post_background" />

    <ImageView
        android:id="@+id/close_dialog_imag"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:onClick="cancelNewPost"
        app:layout_constraintBottom_toTopOf="@+id/new_post_background_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="504dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/new_post_background_purple"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207">


        <TextView
            android:id="@+id/new_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginLeft="135dp"
            android:fontFamily="@font/catamaran_medium"
            android:text="@string/new_post"
            android:textAppearance="@style/new_post" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:fontFamily="@font/catamaran"
            android:hint="@string/post_s_title"
            android:inputType="text"
            android:textAppearance="@style/title" />

<!--        <EditText-->
<!--            android:id="@+id/teams_name_input"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="42dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:background="@color/white"-->
<!--            android:fontFamily="@font/catamaran"-->
<!--            android:hint="@string/relevant_teams"-->
<!--            android:inputType="text"-->
<!--            android:textAppearance="@style/title" />-->

        <Spinner
            android:id="@+id/teams_name_input"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/white"
            android:fontFamily="@font/catamaran"
            android:hint="@string/relevant_teams"
            android:textAppearance="@style/title"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="32dp"/>


        <Spinner
            android:id="@+id/projects_name_input"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:fontFamily="@font/catamaran"
            android:hint="@string/relevant_project"
            android:textAppearance="@style/title" />


        <EditText
            android:id="@+id/posts_content_input"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:fontFamily="@font/catamaran"
            android:gravity="top"
            android:hint="@string/write_your_post"
            android:inputType="textMultiLine"
            android:textAppearance="@style/title" />


    </LinearLayout>

    <Button
        android:id="@+id/post_button"
        android:layout_width="156dp"
        android:layout_height="49dp"
        android:background="@drawable/button_creat_user_backgrpund"
        android:fontFamily="@font/catamaran_medium"
        android:text="@string/post_prompt"
        android:textAppearance="@style/post_prompt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/new_post_background_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.544" />

    <Button
        android:id="@+id/add_project"
        android:layout_width="156dp"
        android:layout_height="49dp"
        android:background="@drawable/button_creat_user_backgrpund"
        android:fontFamily="@font/catamaran_medium"
        android:onClick="addProject"
        android:text="@string/add_project"
        android:textAppearance="@style/post_prompt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/new_post_background_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.538" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>