<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/fui_transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:id="@+id/new_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginLeft="115dp"
                android:text="@string/delete_post"
                android:textAppearance="@style/new_post"/>

            <ImageView
                android:id="@+id/close_dialog_imag"
                android:layout_width="44dp"
                android:layout_height="45dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/ic_close_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity = "center_vertical|center_horizontal">

            <TextView
                android:id="@+id/delete_prompt"
                android:layout_width="256dp"
                android:layout_height="30dp"
                android:fontFamily="@font/catamaran"
                android:text="@string/delete_prompt"
                android:textColor="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/delete_post_button"
                android:layout_width="133dp"
                android:layout_height="24dp"
                android:background="@drawable/post_rectangle"
                android:text="@string/delete"
                android:textAppearance="@style/post_prompt" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
