<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/fui_transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:id="@+id/new_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginLeft="135dp"
                android:text="@string/new_project"
                android:textAppearance="@style/new_post"/>

            <ImageView
                android:id="@+id/close_dialog_imag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart = "120dp"
                android:layout_marginLeft="120dp"
                app:srcCompat="@drawable/ic_close_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity = "center_vertical|center_horizontal">

            <EditText
                android:id="@+id/project_input"
                android:layout_width="340dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:inputType="text"
                android:hint="@string/project_s_name"
                android:textAppearance="@style/title" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/add_project_button"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@drawable/post_rectangle"
                android:text="@string/add_project"
                android:textAppearance="@style/post_prompt" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>