<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show_full_post"
    android:background="@drawable/feed_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/return_button"
            android:layout_width="45dp"
            android:layout_height="34dp"
            android:layout_gravity="right"
            android:onClick="goToFeed"
            android:padding="2dp"
            app:srcCompat="@drawable/close_purple" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            android:elevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/catamaran_bold"
                    android:text="@string/post_title"
                    android:textColor="#33014A"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/post_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/team"
                    android:textColor="#6D6D6D"
                    android:textSize="15sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintStart_toEndOf="@+id/seperator_1"
                    app:layout_constraintTop_toBottomOf="@+id/post_title" />

                <TextView
                    android:id="@+id/post_time_stamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/_10_00"
                    android:textColor="#6D6D6D"
                    android:textSize="15sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/post_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/name"
                    android:textColor="#6D6D6D"
                    android:textSize="15sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintStart_toEndOf="@+id/seperator_2"
                    app:layout_constraintTop_toBottomOf="@+id/post_title" />

                <TextView
                    android:id="@+id/post_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/post_text"
                    android:textColor="#6D6D6D"
                    android:textSize="18sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/post_project" />

                <TextView
                    android:id="@+id/post_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/project"
                    android:textColor="#6D6D6D"
                    android:textSize="15sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/post_title" />

                <TextView
                    android:id="@+id/seperator_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text=" | "
                    android:textColor="#6D6D6D"
                    android:textSize="15sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintStart_toEndOf="@+id/post_project"
                    app:layout_constraintTop_toBottomOf="@+id/post_title" />

                <TextView
                    android:id="@+id/seperator_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text=" | "
                    android:textColor="#6D6D6D"
                    android:textSize="15sp"
                    android:fontFamily="@font/catamaran"
                    app:layout_constraintStart_toEndOf="@+id/post_team"
                    app:layout_constraintTop_toBottomOf="@+id/post_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_creat_user_backgrpund"
                android:backgroundTint="#33014A"
                android:fontFamily="@font/catamaran"
                android:onClick="onClickDeletePost"
                android:text="@string/delete"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>